tests/fail/parsingMM0/abstract def with declared dummies.mm0
    sort s ; 
 def id0  : s = $  $ ; 
